force-app/main/default/objects/QuoteLineItem/fields/Board__c.field-meta.xml
<CustomField>
    <fullName>Board__c</fullName>
    <formula>IF(
  ISBLANK(Tax__r.FlexBoard__c),
  &quot;&quot;,
  &quot;0.0% Até &quot; &amp;
  IF(
    Tax__r.FlexBoard__c &lt; 0.1,
    &quot;0&quot; &amp; TEXT(ROUND(Tax__r.FlexBoard__c * 100, 2)),
    TEXT(ROUND(Tax__r.FlexBoard__c * 100, 2))
  ) &amp; &quot;%&quot;
)</formula>
    <label>Board</label>
    <type>Text</type>
</CustomField>