force-app/main/default/objects/QuoteLineItem/fields/FinalMonthlyRevenue__c.field-meta.xml
<CustomField>
    <fullName>FinalMonthlyRevenue__c</fullName>
    <formula>Tax__r.ReceitaMensalFinal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Receita Mensal Final</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>