force-app/main/default/objects/QuoteLineItem/fields/Flexibility__c.field-meta.xml
<CustomField>
    <fullName>Flexibility__c</fullName>
    <formula>Product2.Flexibility__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Flexibility</label>
    <type>Checkbox</type>
</CustomField>