force-app/main/default/objects/QuoteLineItem/fields/Flexibilization__c.field-meta.xml
<CustomField>
    <fullName>Flexibilization__c</fullName>
    <formula>TEXT(Tax__r.Flexibilization__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nível de flexibilização</label>
    <type>Text</type>
</CustomField>