force-app/main/default/objects/QuoteLineItem/fields/Head__c.field-meta.xml
<CustomField>
    <fullName>Head__c</fullName>
    <formula>IF(
  ISBLANK(Tax__r.FlexBoard__c) || ISBLANK(Tax__r.FlexHead__c),
  &quot;--&quot;,
  IF(
    (Tax__r.FlexBoard__c + 0.0001) &lt; 0.1,
    &quot;0&quot; &amp; TEXT(ROUND((Tax__r.FlexBoard__c + 0.0001) * 100, 2)),
    TEXT(ROUND((Tax__r.FlexBoard__c + 0.0001) * 100, 2))
  ) &amp;
  &quot;% Até &quot; &amp;
  IF(
    Tax__r.FlexHead__c &lt; 0.1,
    &quot;0&quot; &amp; TEXT(ROUND(Tax__r.FlexHead__c * 100, 2)),
    TEXT(ROUND(Tax__r.FlexHead__c * 100, 2))
  ) &amp; &quot;%&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Head</label>
    <type>Text</type>
</CustomField>