force-app/main/default/objects/QuoteLineItem/fields/InitialMonthlyRevenue__c.field-meta.xml
<CustomField>
    <fullName>InitialMonthlyRevenue__c</fullName>
    <formula>Tax__r.ReceitaMensalInicial__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Receita Mensal Inicial</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>