force-app/main/default/objects/QuoteLineItem/fields/IsMain__c.field-meta.xml
<CustomField>
    <fullName>IsMain__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Main</label>
    <type>Checkbox</type>
</CustomField>