force-app/main/default/objects/QuoteLineItem/fields/MonthlyRevenueCode__c.field-meta.xml
<CustomField>
    <fullName>MonthlyRevenueCode__c</fullName>
    <formula>IF(
	OR(Tax__r.RangeFaixaInicial__c &gt; 0, Tax__r.RangeFaixaFinal__c &gt; 0),
	&quot;R$ &quot; &amp; SUBSTITUTE(TEXT(FLOOR(Tax__r.RangeFaixaInicial__c)) &amp; &quot;,&quot; &amp; RIGHT(&quot;00&quot; &amp; TEXT(ROUND(MOD((Tax__r.RangeFaixaInicial__c), 1) * 100, 0)), 2), &quot;.&quot;, &quot;,&quot;) 
&amp; &quot; ~ &quot; &amp; &quot;R$ &quot; &amp; SUBSTITUTE(TEXT(FLOOR(Tax__r.RangeFaixaFinal__c)) &amp; &quot;,&quot; &amp; RIGHT(&quot;00&quot; &amp; TEXT(ROUND(MOD((Tax__r.RangeFaixaFinal__c), 1) * 100, 0)), 2), &quot;.&quot;, &quot;,&quot;)
	, &quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Receita Mensal</label>
    <type>Text</type>
</CustomField>