force-app/main/default/objects/QuoteLineItem/fields/NeedsApproval__c.field-meta.xml
<CustomField>
    <fullName>NeedsApproval__c</fullName>
    <label>Precisa Aprovação</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Head</fullName>
            </value>
            <value>
                <fullName>Board</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>