force-app/main/default/objects/QuoteLineItem/fields/Price__c.field-meta.xml
<CustomField>
    <fullName>Price__c</fullName>
    <formula>IF(PricebookEntry.IsPercent__c,
	TEXT(FLOOR(PercentValue__c * 100))
	&amp;
	&quot;,&quot;
	&amp;
	IF( 
	 LEN(TEXT(PercentValue__c)) &gt; 3
	 , RPAD(SUBSTITUTE(RIGHT(&quot;00&quot; &amp; TEXT(MOD(PercentValue__c * 100, 100)), 2),&quot;.&quot;, &quot;&quot;), 2, &quot;0&quot;)
	 , &quot;00&quot;
	)
	&amp;
	&quot;%&quot;,
	 IF(TEXT(PricebookEntry.CurrencyIsoCode__c) == &apos;EUR&apos;, &quot;€ &quot;, IF(TEXT(PricebookEntry.CurrencyIsoCode__c) == &apos;USD&apos;,  &quot;$ &quot;,  &quot;R$ &quot;)) &amp; 
           SUBSTITUTE(TEXT(FLOOR(UnitPrice - (UnitPrice * Discount))) &amp; &quot;,&quot; &amp; RIGHT(&quot;00&quot; &amp; TEXT(ROUND(MOD((UnitPrice - (UnitPrice * Discount)), 1) * 100, 0)), 2), &quot;.&quot;, &quot;,&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Price</label>
    <type>Text</type>
</CustomField>