force-app/main/default/objects/QuoteLineItem/fields/Tax__c.field-meta.xml
<CustomField>
    <fullName>Tax__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Taxa</label>
    <referenceTo>Taxes__c</referenceTo>
    <relationshipLabel>Quote Line Items</relationshipLabel>
    <relationshipName>QuoteLineItems</relationshipName>
    <type>Lookup</type>
</CustomField>