force-app/main/default/objects/QuoteLineItem/fields/UseTaxa__c.field-meta.xml
<CustomField>
    <fullName>UseTaxa__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Taxa</label>
    <type>Checkbox</type>
</CustomField>