force-app/main/default/objects/QuoteLineItem/validationRules/Block_Edit_On_Synced_Quote.validationRule-meta.xml
<ValidationRule>
    <fullName>Block_Edit_On_Synced_Quote</fullName>
    <active>true</active>
    <description>Bloqueia edição de itens em cotações sincronizadas</description>
    <errorConditionFormula>Quote.IsSyncing = true</errorConditionFormula>
    <errorMessage>Adding or editing items in a synchronized quote is not permitted.</errorMessage>
</ValidationRule>