force-app/main/default/objects/QuoteLineItem/validationRules/InputCurrencyInPercentValue.validationRule-meta.xml
<ValidationRule>
    <fullName>InputCurrencyInPercentValue</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISNEW()), PRIORVALUE(PercentValue__c) &gt;= 0, UnitPrice  &gt; 0)</errorConditionFormula>
    <errorDisplayField>UnitPrice</errorDisplayField>
    <errorMessage>Produto com valor em porcentagem, favor não alterar o valor monetário.</errorMessage>
</ValidationRule>