force-app/main/default/objects/QuoteLineItem/validationRules/InputPercentInCurrencyValue.validationRule-meta.xml
<ValidationRule>
    <fullName>InputPercentInCurrencyValue</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISNEW()), ISBLANK(PRIORVALUE(PercentValue__c)), PercentValue__c &gt; 0)</errorConditionFormula>
    <errorDisplayField>PercentValue__c</errorDisplayField>
    <errorMessage>Produto com valor monetário, favor não alterar o valor de porcentagem.</errorMessage>
</ValidationRule>