force-app/main/default/objects/QuoteLineItem/validationRules/Nao_pode_editar_taxa.validationRule-meta.xml
<ValidationRule>
    <fullName>Nao_pode_editar_taxa</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
				ISCHANGED( UnitPrice ),
    OR(Tax__c == null, Tax__r.FlexBoard__c == null, Tax__r.FlexBoard__c == 0) ,
				NOT(ISNEW()))</errorConditionFormula>
    <errorMessage>This Quoteline Item can not be edited.</errorMessage>
</ValidationRule>