force-app/main/default/objects/QuoteLineItem/validationRules/PercentValueIsNotFlexibility.validationRule-meta.xml
<ValidationRule>
    <fullName>PercentValueIsNotFlexibility</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(Flexibility__c),
    OR(
        ISCHANGED(UnitPrice),
        ISCHANGED(PercentValue__c)
    ),
    NOT(ISNEW())
)</errorConditionFormula>
    <errorMessage>Value has no autonomy to change, taxes has no flexibility</errorMessage>
</ValidationRule>