force-app/main/default/objects/QuoteLineItem/validationRules/teste.validationRule-meta.xml
<ValidationRule>
    <fullName>teste</fullName>
    <active>false</active>
    <errorConditionFormula>IsMain__c = false</errorConditionFormula>
    <errorMessage>erro insert</errorMessage>
</ValidationRule>