force-app/main/default/objects/QuoteLineItem/validationRules/UnitPriceIsNotFlexibility.validationRule-meta.xml
<ValidationRule>
    <fullName>UnitPriceIsNotFlexibility</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISCHANGED(UnitPrice), Flexibilization__c = &apos;Sem Autonomia&apos;)</errorConditionFormula>
    <errorDisplayField>ListPrice</errorDisplayField>
    <errorMessage>Valor não tem autonomia para alteração</errorMessage>
</ValidationRule>